# cargo-hack

./: .clippy.toml  .cspell.json  .deny.toml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  clippy.toml  rustfmt.toml
.github/: FUNDING.yml  bors.toml  dependabot.yml
.github/.cspell/: organization-dictionary.txt  project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml  release.yml
ci/: check-minimal-versions.sh  create-release.sh  install-component.sh  install-rust.sh  upload-assets.sh
fuzz/: .gitignore  Cargo.toml  remove_dev_deps.rs
fuzz/afl/: Cargo.toml  remove_dev_deps.rs
fuzz/seeds/remove_dev_deps/: 01.toml
scripts/: check-minimal-versions.sh  publish.sh
src/: cargo.rs  cli.rs  cmd.rs  context.rs  error.rs  features.rs  fs.rs  main.rs  manifest.rs  metadata.rs  multithread.rs  package.rs  process.rs  remove_dev_deps.rs  restore.rs  rustup.rs  term.rs  version.rs  workspace.rs
src/tests/: cli.rs
tests/: long-help.txt  short-help.txt  test.rs
tests/auxiliary/: mod.rs
tests/auxiliary/build-info/: Cargo.toml  build.rs
tests/auxiliary/build-info/src/: lib.rs
tests/fixtures/: long-help.txt  short-help.txt
tests/fixtures/default_feature_behavior/: Cargo.toml
tests/fixtures/default_feature_behavior/has_default/: Cargo.toml
tests/fixtures/default_feature_behavior/has_default/src/: main.rs
tests/fixtures/default_feature_behavior/no_default/: Cargo.toml
tests/fixtures/glob_matching/: Cargo.toml
tests/fixtures/glob_matching/other_c/: Cargo.toml
tests/fixtures/glob_matching/test_a/: Cargo.toml
tests/fixtures/glob_matching/test_b/: Cargo.toml
tests/fixtures/keep_going/: Cargo.toml
tests/fixtures/keep_going/src/: main.rs
tests/fixtures/must_have_and_exclude_feature/: Cargo.toml
tests/fixtures/must_have_and_exclude_feature/member1/: Cargo.toml
tests/fixtures/must_have_and_exclude_feature/member2/: Cargo.toml
tests/fixtures/must_have_and_exclude_feature/member3/: Cargo.toml
tests/fixtures/namespaced_features/: Cargo.toml
tests/fixtures/namespaced_features/explicit/: Cargo.toml
tests/fixtures/namespaced_features/implicit/: Cargo.toml
tests/fixtures/namespaced_features/member1/: Cargo.toml
tests/fixtures/namespaced_features/member2/: Cargo.toml
tests/fixtures/namespaced_features/member3/: Cargo.toml
tests/fixtures/namespaced_features/member4/: Cargo.toml
tests/fixtures/namespaced_features/src/: main.rs
tests/fixtures/no_dev_deps/: Cargo.toml
tests/fixtures/no_dev_deps/member1/: Cargo.toml
tests/fixtures/no_dev_deps/member2/: Cargo.toml
tests/fixtures/no_dev_deps/member3/: Cargo.toml
tests/fixtures/optional_deps/: Cargo.toml
tests/fixtures/optional_deps/member2/: Cargo.toml
tests/fixtures/optional_deps/member3/: Cargo.toml
tests/fixtures/optional_deps/real/: Cargo.toml
tests/fixtures/optional_deps/src/: main.rs
tests/fixtures/package_collision/: Cargo.toml
tests/fixtures/package_collision/member1/: Cargo.toml
tests/fixtures/package_collision/member1/src/: main.rs
tests/fixtures/package_collision/member2/: Cargo.toml
tests/fixtures/powerset_deduplication/: Cargo.toml
tests/fixtures/powerset_deduplication/member1/: Cargo.toml
tests/fixtures/real/: Cargo.toml
tests/fixtures/real/member1/: Cargo.toml
tests/fixtures/real/member2/: Cargo.toml
tests/fixtures/real/member3/: Cargo.toml
tests/fixtures/real_root_public/: Cargo.toml
tests/fixtures/real_root_public/src/: main.rs
tests/fixtures/run/real/: Cargo.toml
tests/fixtures/run/real/member1/: Cargo.toml
tests/fixtures/run/real/member2/: Cargo.toml
tests/fixtures/run/virtual/member1/: Cargo.toml
tests/fixtures/rust-version/: Cargo.toml
tests/fixtures/rust-version/member1/: Cargo.toml
tests/fixtures/rust-version/member2/: Cargo.toml
tests/fixtures/rust-version/member3/: Cargo.toml
tests/fixtures/virtual/: Cargo.toml
tests/fixtures/virtual/.cargo/: config
tests/fixtures/virtual/dir/not_find_manifest/: Cargo.toml
tests/fixtures/virtual/member1/: Cargo.toml
tests/fixtures/virtual/member2/: Cargo.toml
tests/fixtures/weak_dep_features/: Cargo.toml
tests/fixtures/weak_dep_features_implicit/: Cargo.toml
tests/fixtures/weak_dep_features_namespaced/: Cargo.toml
tests/fixtures/windows_not_find_manifest/: Cargo.toml
tests/fixtures/windows_not_find_manifest/.cargo/: config
tests/fixtures/windows_not_find_manifest/dir/member2/: Cargo.toml
tests/fixtures/windows_package_collision/member1/: Cargo.toml
tools/: publish.sh
