[package]
name = "cargo-hack"
version = "0.6.3"
edition = "2021"
rust-version = "1.64"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/cargo-hack"
keywords = ["cargo", "subcommand", "testing"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools::testing"]
exclude = ["/.*", "/tools"]
description = """
Cargo subcommand to provide various options useful for testing and continuous integration.
"""
# The official tools/services of rust-lang no longer refer to it since RFC 3052,
# but it seems still useful for packaging. https://github.com/taiki-e/cargo-hack/pull/173
authors = ["Taiki Endo <te316e89@gmail.com>", "cargo-hack Contributors"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[workspace]
resolver = "2"

[dependencies]
anyhow = "1.0.47"
ctrlc = { version = "3.1.4", features = ["termination"] }
is-terminal = "0.4"
lexopt = "0.3"
same-file = "1.0.1"
serde_json = "1"
slab = "0.4.4"
termcolor = "1.1"
toml_edit = "0.19"

[dev-dependencies]
build-context = "0.1"
easy-ext = "1"
fs-err = "2"
tempfile = "3"
walkdir = "2"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
