[package]
name = "cargo-hack"
version = "0.6.14"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/cargo-hack"
keywords = ["cargo", "subcommand", "testing"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools::testing"]
exclude = ["/.*", "/tools"]
description = """
Cargo subcommand to provide various options useful for testing and continuous integration.
"""
# The official tools/services of rust-lang no longer refer to it since RFC 3052,
# but it seems still useful for packaging. https://github.com/taiki-e/cargo-hack/pull/173
authors = ["Taiki Endo <te316e89@gmail.com>", "cargo-hack Contributors"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
anyhow = "1.0.47"
cargo-config2 = "0.1.13"
ctrlc = { version = "3.1.4", features = ["termination"] }
is-terminal = "0.4.2"
lexopt = "0.3"
same-file = "1.0.1"
serde_json = "1"
slab = "0.4.4"
termcolor = "1.1"
toml_edit = "0.21"

[dev-dependencies]
build-context = "0.1"
easy-ext = "1"
fs-err = "2"
tempfile = "3"

[lints]
workspace = true

[workspace]
resolver = "2"

# This table is shared by projects under https://github.com/taiki-e.
# It is not intended for manual editing.
[workspace.lints.rust]
improper_ctypes = "warn"
improper_ctypes_definitions = "warn"
non_ascii_idents = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
[workspace.lints.clippy]
all = "warn" # Downgrade deny-by-default lints
pedantic = "warn"
as_ptr_cast_mut = "warn"
default_union_representation = "warn"
inline_asm_x86_att_syntax = "warn"
trailing_empty_array = "warn"
transmute_undefined_repr = "warn"
undocumented_unsafe_blocks = "warn"
# Suppress buggy or noisy clippy lints
borrow_as_ptr = { level = "allow", priority = 1 } # https://github.com/rust-lang/rust-clippy/issues/8286
doc_markdown = { level = "allow", priority = 1 }
float_cmp = { level = "allow", priority = 1 } # https://github.com/rust-lang/rust-clippy/issues/7725
manual_assert = { level = "allow", priority = 1 }
manual_range_contains = { level = "allow", priority = 1 } # https://github.com/rust-lang/rust-clippy/issues/6455#issuecomment-1225966395
missing_errors_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
single_match = { level = "allow", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
struct_excessive_bools = { level = "allow", priority = 1 }
too_many_arguments = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
type_complexity = { level = "allow", priority = 1 }

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
