[package]
name = "fuzz-libfuzzer"
version = "0.0.0"
edition = "2018"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]
resolver = "2"

[dependencies]
libfuzzer-sys = "0.4"
toml = "0.5"

[[bin]]
name = "remove_dev_deps"
path = "remove_dev_deps.rs"
test = false
doc = false

[profile.release]
debug = true
debug-assertions = true
overflow-checks = true
