[package]
name = "namespaced_features"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
resolver = "2"

[features]
easytime = ["dep:easytime"]

[dependencies]
# easytime 0.2.6 requires Rust 1.58
easytime = { version = "=0.2.5", optional = true, default-features = false }

[dev-dependencies]
