[package]
name = "namespaced_features"
version = "0.0.0"
edition = "2021"
publish = false

[features]
easytime = ["dep:easytime"]

[dependencies]
# easytime 0.2.6 requires Rust 1.58
easytime = { version = "=0.2.5", optional = true, default-features = false }
# When namespace dependency is used, other optional dependencies are also not
# treated as implicit features.
portable-atomic = { version = "1", optional = true }

[dev-dependencies]

[workspace]
resolver = "2"
