[package]
name = "optional_deps"
version = "0.0.0"
publish = false

[workspace]
members = [
    "real",
    "member2",
    "member3",
    ".",
]

[features]

[dependencies]
real = { path = "real", optional = true }
member2 = { path = "member2" }
renemed = { path = "member3", package = "member3", optional = true }
