[package]
name = "optional_deps"
version = "0.0.0"
publish = false

[features]

[dependencies]
real = { path = "real", optional = true }
member2 = { path = "member2" }
renamed = { path = "member3", package = "member3", optional = true }

[workspace]
members = [
    "real",
    "member2",
    "member3",
    ".",
]
