[package]
name = "deduplication"
version = "0.0.0"
publish = false

[workspace]
members = [
    "member1",
    ".",
]

[features]
a = []
b = ["a"]
c = ["b"]
d = ["member1"]
e = ["b", "d"]

[dependencies]
member1 = { path = "member1", optional = true }
# easytime 0.2.6 requires Rust 1.58
easytime = { version = "=0.2.5", default-features = false }

[dev-dependencies]
