[package]
name = "real"
version = "0.1.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
publish = false

[workspace]
members = [
    "member1",
    "member2",
    ".",
]

[dependencies]

[dev-dependencies]

[target.'cfg(unix)'.dev-dependencies]

[features]
default = []
a = []
b = []
c = []
