[package]
name = "real"
version = "0.1.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
publish = false

[workspace]
members = [
    "member1",
    "member2",
    "member3",
    ".",
]

[features]
default = []
a = []
b = []
c = []

[dependencies]
member1 = { path = "member1", optional = true }

[dev-dependencies]
