[package]
name = "real"
version = "0.0.0"
publish = false
rust-version = "1.76"

[features]
default = []
a = []
b = []
c = []

[dependencies]
member1 = { path = "member1", optional = true }
argfile = "0.1.5"

[dev-dependencies]

[workspace]
members = [
    "member1",
    "member2",
    "member3",
    ".",
]
